Fixed: cube.gif no se cargaba por un error de ruta

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <img src="/assets/cube.gif" alt="">
+        <img src="assets/cube.gif" alt="">
         <h2> &lt;En construcción&gt; </h2>
         <p>Disculpe las molestias</p>
         <a href="https://marc7hedev.github.io/portfoliov1/" class="button button--flex button--small portfolio__button">
