--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>404 Error</title>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="assets/style.css" type="text/css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 
 <body>
